changed title and meta

--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
   name: Markus Nentwich
   meta:
     title: Markus Nentwich
-    description: Webshop für Noten und persönliche Infos über Markus Nentwich.
+    description: Markus Nentwich (*28.12.1994) ist Musiker, Komponist und Arrangeur aus Niederösterreich. Auf dieser Homepage können Sie Noten kaufen und Workshops buchen.
     keywords:
       - Markus Nentwich
       - Eine letzte Runde
